--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=payments-app
 server.servlet.contextPath=/payments-app
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
