--- a/payments-repository/pom.xml
+++ b/payments-repository/pom.xml
@@ -22,6 +22,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.42.0</version>
+        </dependency>
     </dependencies>
 
 </project>
